--- a/app/src/main/res/layout/activity_good_bye.xml
+++ b/app/src/main/res/layout/activity_good_bye.xml
@@ -7,12 +7,30 @@
     tools:context=".GoodBye">
 
     <TextView
+        android:id="@+id/Goodbye"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="30sp"
-        android:textAlignment="center"
+        android:layout_height="wrap_content"
         android:text="GOOD BYE SCREEN"
-        android:textColor="@color/purple_500">
+        android:textAlignment="center"
+        android:textColor="@color/purple_500"
+        android:textSize="30sp"
+        tools:ignore="MissingConstraints">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/User"
+        android:layout_width="182dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="229dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
+        android:text="User Name"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Goodbye"
+        tools:ignore="MissingConstraints">
 
     </TextView>
 
