--- a/app/src/main/res/layout/activity_good_bye.xml
+++ b/app/src/main/res/layout/activity_good_bye.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GoodBye">
+    tools:context=".GoodBye"
+    android:background="@drawable/goodbye">
 
     <TextView
         android:id="@+id/Goodbye"
