--- a/app/src/main/res/layout/activity_vitals.xml
+++ b/app/src/main/res/layout/activity_vitals.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/Vitals"
-        android:layout_width="1896dp"
-        android:layout_height="110dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:text="@string/vitals"
         android:textAlignment="center"
@@ -98,7 +98,7 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="1918dp"
+        android:layout_width="match_parent"
         android:layout_height="425dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/Butt"
@@ -112,9 +112,9 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView14"
-                android:layout_width="1918dp"
-                android:layout_height="425dp"
+                android:id="@+id/Data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:focusable="false"
                 android:textColor="@color/black"
                 android:textSize="45sp"
